--- a/index.html
+++ b/index.html
@@ -18,37 +18,48 @@
 			<h2>Skills</h2>
 			<ul>
 				<li>Azure cloud |</li>
-				<li>Azure administration |</li>
-				<li>Git |</li>
-				<li>Github |</li>
-				<li>Gitlab |</li>
-				<li>Jenkins |</li>
-				<li>Docker |</li>
-				<li>Kubernetes |</li>
-				<li>Ansible |</li>
-				<li>Terraform |</li>
-				<li>Dynatrace |</li>
-				<li>Grafana |</li>
-				<li>Linux |</li>
-				<li>Shell |</li>
-				<li>Python |</li>
+				<li> Azure administration |</li>
+				<li> Git |</li>
+				<li> Github |</li>
+				<li> Gitlab |</li>
+				<li> Jenkins |</li>
+				<li> Docker |</li>
+				<li> Kubernetes |</li>
+				<li> Ansible |</li>
+				<li> Terraform |</li>
+				<li> Dynatrace |</li>
+				<li> Grafana |</li>
+				<li> Linux |</li>
+				<li> Shell |</li>
+				<li> Python |</li>
 			</ul>
 		</section>
 		<section>
 			<h2>Experience</h2>
 			<h3>Cloud Support Engineer/System Engineer, ADFOLKS LLC July 2023 - present</h3>
-			<p>Performed Azure Kubernetes Service (AKS) and PowerShell version upgrades using Infrastructure as Code (IaC) with Terraform, automated through GitLab pipelines to ensure seamless updates and maintain environment consistency. </p>
-			<p>Migrated few Azure VMs from Gen 1 to Gen 2, configured GitLab Runners on the VMs, and developed a script to add a daily cron job that deletes old data at 3 AM, optimizing storage and ensuring system efficiency. </p>
-			<p>Optimized cloud costs by reducing unnecessary Azure alerts, migrating non-critical logs from Azure Log Analytics Workspace to Azure Storage Accounts, and leveraging Reserved Instances to lower expenses on consistently used services. </p>
-			<p>Utilized Git and GitLab for version control and code management, including cloning, branching and managing code changes through pull requests, creating merge requests, and implementing GitLab CI/CD pipelines for automated testing and deployment, enhancing code quality and integration efficiency. </p>
-			<p>Utilized monitoring tools such as Dynatrace, Azure Monitor, and Grafana for effective performance monitoring and troubleshooting, enabling proactive issue resolution and enhancing system reliability. Managed weekly production deployments and hotfixes for application and infrastructure code changes, utilizing GitLab for managing merge requests and implementing CI/CD pipelines to automate testing and deployment. </p>
-			<p>Proactively identified errors through log analysis and utilized Helm for rollbacks to ensure system stability and functionality post-deployment. Raised and worked on Microsoft Tickets whenever there was any critical issue related to the Project environment and minimized the impact for the client by actively working on the cases. </p>
-			<p>Documented deployment processes, troubleshooting guides, and infrastructure changes to maintain clear communication across teams and support onboarding of new team members.</p>
+			<p> > Performed Azure Kubernetes Service (AKS) and PowerShell version upgrades using Infrastructure as Code (IaC) with Terraform, automated through GitLab pipelines to ensure seamless updates and maintain environment consistency. </p>
+
+			<p> > Migrated few Azure VMs from Gen 1 to Gen 2, configured GitLab Runners on the VMs, and developed a script to add a daily cron job that deletes old data at 3 AM, optimizing storage and ensuring system efficiency. </p>
+
+			<p> > Optimized cloud costs by reducing unnecessary Azure alerts, migrating non-critical logs from Azure Log Analytics Workspace to Azure Storage Accounts, and leveraging Reserved Instances to lower expenses on consistently used services. </p>
+
+			<p> > Utilized Git and GitLab for version control and code management, including cloning, branching and managing code changes through pull requests, creating merge requests, and implementing GitLab CI/CD pipelines for automated testing and deployment, enhancing code quality and integration efficiency. </p>
+
+			<p> > Utilized monitoring tools such as Dynatrace, Azure Monitor, and Grafana for effective performance monitoring and troubleshooting, enabling proactive issue resolution and enhancing system reliability. Managed weekly production deployments and hotfixes for application and infrastructure code changes, utilizing GitLab for managing merge requests and implementing CI/CD pipelines to automate testing and deployment. </p>
+
+			<p> > Proactively identified errors through log analysis and utilized Helm for rollbacks to ensure system stability and functionality post-deployment. Raised and worked on Microsoft Tickets whenever there was any critical issue related to the Project environment and minimized the impact for the client by actively working on the cases. </p>
+
+			<p> > Documented deployment processes, troubleshooting guides, and infrastructure changes to maintain clear communication across teams and support onboarding of new team members.</p>
+
 			<h3>DevOps Engineer Intern, ABHYAZ MTAB Technology Center April 2023 – June 2023</h3>
-			<p>Researched different cloud platforms (AWS/Azure/GCP) to get a complete understanding to recommend clients and customers the best-suited cloud platform for their problems. </p>
-			<p>During my internship I made a personal project with PPT and interactive video explanation (Grafana Integration with MYSQL DB on AWS ) and won the best intern of the month award. </p>
-			<p>Researched on different cloud and DevOps tools like docker, pod man, Jupiter notes, VS code, Eclipse, and Open stack and took part in open debate competition with my teammates on features, use cases, pros, and corns for the tools.</p>
-			<p> After completing the 3 months of internship I was chosen as the new intern lead to help and guide the next batch of interns with their tasks, outcome, onboarding, and exiting process.</p>
+
+			<p> > Researched different cloud platforms (AWS/Azure/GCP) to get a complete understanding to recommend clients and customers the best-suited cloud platform for their problems. </p>
+
+			<p> > During my internship I made a personal project with PPT and interactive video explanation (Grafana Integration with MYSQL DB on AWS ) and won the best intern of the month award. </p>
+
+			<p> > Researched on different cloud and DevOps tools like docker, pod man, Jupiter notes, VS code, Eclipse, and Open stack and took part in open debate competition with my teammates on features, use cases, pros, and corns for the tools.</p>
+
+			<p> > After completing the 3 months of internship I was chosen as the new intern lead to help and guide the next batch of interns with their tasks, outcome, onboarding, and exiting process.</p>
 		</section>
 		<section>
 			<h2>Education</h2>
