--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 		<section>
 			<h2>Skills</h2>
 			<ul>
-				<li>Azure cloud</li>
-				<li>|   Azure administration</li>
-				<li>|   Git</li>
-				<li>|   Github</li>
-				<li>|   Gitlab-Ci</li>
-				<li>|   Jenkins CI/CD</li>
-				<li>|   Docker</li>
-				<li>|   Kubernetes</li>
-				<li>|   Ansible</li>
-				<li>|   Terraform</li>
-				<li>|   Dynatrace</li>
-				<li>|   Grafana</li>
-				<li>|   Linux</li>
-				<li>|   Shell</li>
-				<li>|   Python</li>
+				<li>Azure cloud |</li>
+				<li>| Azure administration |</li>
+				<li>| Git |</li>
+				<li>| Github| </li>
+				<li>| Gitlab-Ci |</li>
+				<li>| Jenkins CI/CD| </li>
+				<li>| Docker |</li>
+				<li>| Kubernetes |</li>
+				<li>| Ansible |</li>
+				<li>| Terraform |</li>
+				<li>| Dynatrace |</li>
+				<li>| Grafana |</li>
+				<li>| Linux |</li>
+				<li>| Shell |</li>
+				<li>| Python |</li>
 			</ul>
 		</section>
 		<section>
